Update FPS game: sprint/crawl mechanics, improved collision, map spacing, and movement-based shooting accuracy

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <div id="game-container">
         <div id="score">Score: 0</div>
         <div id="ammo">Solar Panels: 10</div>
+        <div id="minimap-container">
+            <canvas id="minimap"></canvas>
+        </div>
+        <div id="crosshair">
+            <div id="crosshair-dot"></div>
+            <div id="crosshair-line" class="top"></div>
+            <div id="crosshair-line" class="bottom"></div>
+            <div id="crosshair-line" class="left"></div>
+            <div id="crosshair-line" class="right"></div>
+        </div>
     </div>
     <script type="module" src="game.js"></script>
 </body>
